# btcap

./: README.md  main.py  pyproject.toml  requirements.txt
src/btcap/: __init__.py  main.py
src/btcap/bt/: bt.py
src/btcap/ccmd/: session.py  show.py
src/btcap/cli/: bt_sessions.py  cli.py  handler.py
src/btcap/core/: fsession.py  state.py
src/btcap/view/: view.py
